--- a/src/components/layout/MainPanel.module.css
+++ b/src/components/layout/MainPanel.module.css
@@ -129,9 +129,8 @@
   overflow: hidden;
   display: flex;
   min-width: 0;
-  max-width: 100%;
+  width: 100%;
   box-sizing: border-box;
-  contain: inline-size;
 }
 
 .placeholder {
